--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.username=root
-spring.datasource.password=test1234
+spring.datasource.url=jdbc:mysql://bharhatspringsecuritydb.co4b7agzqpmj.eu-central-1.rds.amazonaws.com:3306/bharhatspringsecuritydb
+spring.datasource.username=admin
+spring.datasource.password=Galerien3?
 
+spring.jpa.open-in-view=false
 server.port=9090
 
 couponService.url=http://localhost:9091/couponapi/coupons/
