--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://localhost:3306/bharath-security-sect4-chap28-db
 spring.datasource.username=root
-spring.datasource.password=test1234
+spring.datasource.password=Galerien3?
 
 server.port=9091
 
