--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bharath-security-sect4-chap28-db
+spring.datasource.url=jdbc:mysql://localhost:3306/bharath-security-sect4-chap28-db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Galerien3?
 
