Chap28-create the DB tables: final delivery

--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bharath-security-sect4-chap28-db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/bharath_security_sect4_chap28_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Galerien3?
 
@@ -6,4 +6,5 @@ server.port=9091
 
 spring.thymeleaf.cache=false
 
-security.oauth2.resource.jwt.key-uri=http://localhost:9092/oauth/token_key
+# OAUTH2 STUFF. Must be commented out if Oauth2 is not in use !!!!
+# security.oauth2.resource.jwt.key-uri=http://localhost:9092/oauth/token_key
