Sect5_Chap45-Pierrot-Refinements: automated the DB-Init.

--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -6,5 +6,12 @@ server.port=9091
 
 spring.thymeleaf.cache=false
 
+# INITIALIZES MySQL DB. FROM SB2.5.x
+# spring.sql.init.mode=always
+
+# INITIALIZES MySQL DB. BEFORE SB2.5.x
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
+
 # OAUTH2 STUFF. Must be commented out if Oauth2 is not in use !!!!
 # security.oauth2.resource.jwt.key-uri=http://localhost:9092/oauth/token_key
