--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -7,11 +7,12 @@ server.port=9091
 spring.thymeleaf.cache=false
 
 # INITIALIZES MySQL DB. FROM SB2.5.x
-# spring.sql.init.mode=always
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
 # INITIALIZES MySQL DB. BEFORE SB2.5.x
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.initialization-mode=always
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.initialization-mode=always
 
 # OAUTH2 STUFF. Must be commented out if Oauth2 is not in use !!!!
 # security.oauth2.resource.jwt.key-uri=http://localhost:9092/oauth/token_key
