Sect6_XXX: added color in the logs

--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.password=Galerien3?
 
 server.port=9091
 
+# ENABLE COLOR ON TERMINAL ENTRIES
+spring.output.ansi.enabled=ALWAYS
+
 spring.thymeleaf.cache=false
 
 # INITIALIZES MySQL DB. FROM SB2.5.x
