Sect6_XXX: added debug entries in the logs

--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.password=Galerien3?
 
 server.port=9091
 
+logging.level.org.springframework.security=debug
+
 # ENABLE COLOR ON TERMINAL ENTRIES
 spring.output.ansi.enabled=ALWAYS
 
