--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bharath_security_sect5_chap42_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/bharath_security_sect5_chap42_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Galerien3?
+
+spring.flyway.user=root
+spring.flyway.password=Galerien3?
 
 server.port=9091
 
@@ -12,8 +15,8 @@ spring.output.ansi.enabled=ALWAYS
 spring.thymeleaf.cache=false
 
 # INITIALIZES MySQL DB. FROM SB2.5.x
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
 
 # INITIALIZES MySQL DB. BEFORE SB2.5.x
 #spring.jpa.hibernate.ddl-auto=none
