--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3307/bharath_security_sect5_chap42_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Galerien3?
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.flyway.user=root
 spring.flyway.password=Galerien3?
