Sect5_ASSN2-XXX CouponServ: changed DB-init mode when DB exists

--- a/couponservice/src/main/resources/application.properties
+++ b/couponservice/src/main/resources/application.properties
@@ -7,7 +7,8 @@ server.port=9091
 spring.thymeleaf.cache=false
 
 # INITIALIZES MySQL DB. FROM SB2.5.x
-spring.sql.init.mode=always
+# set to 'never' since DB already exists !!!!
+spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=true
 
 # INITIALIZES MySQL DB. BEFORE SB2.5.x
