Sect6_XXX(productService): migrated the DB to Coupon Service

--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,8 +1,27 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bharath_security_sect4_chap28_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/bharath_security_sect5_chap42_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Galerien3?
 
+# ENABLE COLOR ON TERMINAL ENTRIES
+spring.output.ansi.enabled=ALWAYS
+
+# SHOW SQL
+spring.jpa.properties.hibernate.show_sql=true
+
+# FORMAT SQL
+spring.jpa.properties.hibernate.format_sql=true
+
+log.level.org.springframework.security=debug
 
 server.port=9090
 
 couponService.url=http://localhost:9091/couponapi/coupons/
+
+
+
+# SHOW BIND VALUES
+# New with Hibernate 6.x
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+
+logging.level.org.springframework.security=debug
