--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/bharath_security_sect5_chap42_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3307/bharath_security_sect5_chap42_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://bharhatspringsecuritydb.co4b7agzqpmj.eu-central-1.rds.amazonaws.com:3306/bharhatspringsecuritydb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.username=root
+
+# AWS
+spring.datasource.username=admin
 spring.datasource.password=Galerien3?
 
 # ENABLE COLOR ON TERMINAL ENTRIES
